# bot-template

./: .gitignore  AUTHORS  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  config.sample.py  docker-compose.yml  pyproject.toml  start.py
.github/ISSUE_TEMPLATE/: bug_report.md
bot/: __init__.py  bot.py  database.py  decrement.py  get_counter.py  hello.py  hello_world.py  increment.py  set_counter.py
tests/: __init__.py  test_version.py
