[tool.black]
line-length = 79

[tool.poetry]
name = "bot"
version = "0.1.0"
description = "Yet another template for creating a Telegram bot in Python."
authors = ["Hearot <gabriel@hearot.it>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
redis = "^3.5.3"
environs = "^8.0.0"

[tool.poetry.dev-dependencies]
packaging = "^20.4"
pytest = "^5.2"
pre-commit = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
